TestCases/Errors/BiomassEventMortalityReport/run.bat
..\..\..\Build\windows\spm -r -i MPD.dat > run.log
..\..\..\Build\windows\spm -e > estimate.log